--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -91,3 +91,35 @@ body{
 .menu .comment-icon :hover {
     color: #499ef3;
 }
+
+.sub-comments .btn {
+    margin: 10px 0;
+}
+
+.question-tag {
+    margin-right: 5px;
+}
+
+.question-related {
+    line-height: 20px;
+    font-size: 12px;
+    margin-left: 0;
+    list-style: none;
+    padding-left: 0;
+}
+
+.question-wechat {
+    width: 95%;
+}
+
+.publish-tag-tab {
+    display: none;
+    margin-top: 10px;
+    padding-top: 10px;
+}
+
+.publish-tag-tab .label-info {
+    white-space: normal;
+    margin: 5px 5px;
+    display: inline-block;
+}
