--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -10,6 +10,7 @@
     <script src="/js/jquery/jquery-3.5.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/community.js"></script>
+    <script src="/js/moment.js"></script>
 </head>
 <body>
 <div th:include="include/navigation :: nav"></div>
@@ -27,6 +28,17 @@
             </span>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12"/>
+
+                <!--标签-->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <span class="question-tag label label-info" th:each="tag : ${question.tag.split(',')}">
+                        <span class="glyphicon glyphicon-tags"></span>
+                        <a th:href="@{/(page=1,tag=${tag})}"
+                           th:text="${tag}" class="community-tag"></a>
+                    </span>
+                </div>
+
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12"/>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <a th:href="@{'/publish/' + ${question.id}}" class="community-menu"
@@ -71,16 +83,16 @@
                                       th:text="${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}"></span>
                             </div>
                             <!--二级评论-->
-                            <!--<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse sub-comments"-->
-                            <!--     th:id="${'comment-'+comment.id}">-->
-                            <!--    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">-->
-                            <!--        <input type="text" class="form-control" placeholder="评论一下……"-->
-                            <!--               th:id="${'input-'+comment.id}">-->
-                            <!--        <button type="button" class="btn btn-success pull-right" onclick="comment(this)"-->
-                            <!--                th:data-id="${comment.id}">评论-->
-                            <!--        </button>-->
-                            <!--    </div>-->
-                            <!--</div>-->
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 collapse sub-comments"
+                                 th:id="${'comment-'+comment.id}">
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                    <input type="text" class="form-control" placeholder="评论一下……"
+                                           th:id="${'input-'+comment.id}">
+                                    <button type="button" class="btn btn-success pull-right" onclick="comment(this)"
+                                            th:data-id="${comment.id}">评论
+                                    </button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -129,9 +141,21 @@
                     </div>
                 </div>
             </div>
+
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 side">
+                <h4>官方微信</h4>
+                <img class="img-thumbnail question-wechat" src="https://gitee.com/bxgitee/noteImage/raw/master/image/blogImagei.jpg">
+            </div>
+
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>相关问题</h4>
+                <ul class="question-related">
+                    <li th:each="related : ${relatedQuestions}">
+                        <a th:href="@{'/question/'+ ${related.id}}" th:text="${related.title}"></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
