--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -161,7 +161,7 @@
 
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 side">
-                <h4>广告位</h4>
+                <h4>占位占位</h4>
                 <img class="img-thumbnail question-wechat" src="https://gitee.com/bxgitee/noteImage/raw/master/image/blogImagei.jpg">
             </div>
 
@@ -177,5 +177,6 @@
         </div>
     </div>
 </div>
+<div th:insert="~{include/footer :: foot}"></div>
 </body>
 </html>
