--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -123,3 +123,10 @@ body{
     margin: 5px 5px;
     display: inline-block;
 }
+
+.footer {
+    text-align: center;
+    font-size: 12px;
+    color: #666;;
+    padding: 0 0 15px 0;
+}
