--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -16,5 +16,6 @@
     <p th:text="${message}">服务器出错或页面不存在</p>
     <p><a class="btn btn-primary btn-lg" href="/" role="button">回到主页</a></p>
 </div>
+<div th:insert="~{include/footer :: foot}"></div>
 </body>
 </html>
