--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -26,11 +26,13 @@
                 <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题（简单扼要）：</label>
-                    <input type="text" class="form-control" th:value="${title}" id="title" name="title" placeholder="问题标题......">
+                    <input type="text" class="form-control" th:value="${title}" id="title" name="title"
+                           placeholder="问题标题......">
                 </div>
                 <div class="form-group" id="question-editor" style="z-index: 2">
                     <label for="title">问题补充（必填，参照右侧提醒）：</label>
-                    <textarea name="description" id="description" th:text="${description}" style="display:none;" cols="30" rows="10" class="form-control"></textarea>
+                    <textarea name="description" id="description" th:text="${description}" style="display:none;"
+                              cols="30" rows="10" class="form-control"></textarea>
                 </div>
                 <script type="text/javascript">
                     $(function () {
@@ -49,7 +51,8 @@
                 </script>
                 <div class="form-group">
                     <label for="title">添加标签：</label>
-                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag" placeholder="输入标签，以 , 分隔" autocomplete="off" onclick="showSelectTag()">
+                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag"
+                           placeholder="输入标签，以 , 分隔" autocomplete="off" onclick="showSelectTag()">
                     <!--   -->
                     <div id="select-tag" class="publish-tag-tab">
                         <ul class="nav nav-tabs" role="tablist">
@@ -59,17 +62,18 @@
                                    data-toggle="tab" th:text="${selectCategory.categoryName}"></a>
                             </li>
                         </ul>
+                        <!-- 标签 -->
                         <div class="tab-content">
                             <div role="tabpanel" th:id="${selectCategory.categoryName}"
                                  th:each="selectCategory: ${tags}"
                                  th:class="${selectCategoryStat.first ? 'active tab-pane':'tab-pane'}">
                                 <span>
                                     <span class="label label-info" th:each="selectTag: ${selectCategory.tags}">
-                                    <span class="community-tag glyphicon glyphicon-tags" onclick="selectTag(this)"
-                                          th:data-tag="${selectTag}"
-                                          th:text="${' '+selectTag}">
+                                        <span class="community-tag glyphicon glyphicon-tags" onclick="selectTag(this)"
+                                              th:data-tag="${selectTag}"
+                                              th:text="${' '+selectTag}">
+                                        </span>
                                     </span>
-                                </span>
                                 </span>
                             </div>
                         </div>
@@ -77,13 +81,12 @@
                 </div>
 
 
-
                 <!--<span class="alert alert-danger" th:if="${error != null}" th:text="${error}"></span>-->
                 <!--<button type="submit" class="btn btn-success btn-publish">发布</button>-->
                 <div class="container-fluid main ">
                     <div class="row">
                         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-                            <div class="alert alert-danger col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                            <div class="alert alert-danger col-lg-12 col-md-12 col-sm-12 col-xs-12" id="error_tips"
                                  th:text="${error}"
                                  th:if="${error != null}">
                             </div>
