--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,30 +46,30 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${pagination.showFirstPage}">
-                        <a  th:href="@{/(page=1,search=${search})}"
+                        <a  th:href="@{/(page=1,search=${search},tag=${tag})}"
                                 aria-label="Previous">
                             <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
                     <li th:if="${pagination.showPrevious}">
-                        <a th:href="@{/(page=${pagination.page - 1},search=${search})}"
+                        <a th:href="@{/(page=${pagination.page - 1},search=${search},tag=${tag})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
 
                     <li th:each="page : ${pagination.pages}" th:class="${pagination.page == page}? 'active' : ''">
-                        <a th:href="@{/(page=${page},search=${search})}" th:text="${page}"></a>
+                        <a th:href="@{/(page=${page},search=${search},tag=${tag})}" th:text="${page}"></a>
                     </li>
 
                     <li th:if="${pagination.showNext}">
-                        <a th:href="@{/(page=${pagination.page + 1},search=${search})}"
+                        <a th:href="@{/(page=${pagination.page + 1},search=${search},tag=${tag})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
                     <li th:if="${pagination.showEndPage}">
-                        <a th:href="@{/(page=${pagination.totalPage},search=${search})}"
+                        <a th:href="@{/(page=${pagination.totalPage},search=${search},tag=${tag})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&gt;&gt;</span>
                         </a>
@@ -78,10 +78,16 @@
             </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>热门话题</h3>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 side">
-                <h4>占位占位</h4>
+                <h4>广告~</h4>
                 <img class="img-thumbnail question-wechat" src="https://gitee.com/bxgitee/noteImage/raw/master/image/blogImagei.jpg">
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h3>热门话题</h3>
+                <span th:each="tag : ${hotTags}">
+                    <a th:href="@{/(page=1,tag=${tag})}"
+                       th:text="${tag}" class="community-tag"></a><br/>
+                </span>
             </div>
         </div>
     </div>
